--- a/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
@@ -21,45 +21,51 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)"  matSortActive="name" matSortDirection="asc" matSortDisableClear>
-          <!-- Position Column -->
-          <ng-container matColumnDef="name">
-            <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
-          </ng-container>
 
-          <ng-container matColumnDef="description">
-            <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.Description==null">-</span>
-              <span *ngIf="element.Description!=null">{{element.Description}} </span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="actions">
-            <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let element">
-              <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View" (click)="navigateToAssetLibraryView(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
-                  <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToAssetLibraryEdit(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
-                  <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <button type="button" id="btnDeleteRole"title="Delete"  (click)="deleteAssetLibrary(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
-                  <span class="fa fa-trash-o"></span>
-                </button>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <div *ngIf='assetLibraryList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='assetLibraryList.length!=0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)"  matSortActive="name" matSortDirection="asc" matSortDisableClear>
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+              <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="description">
+              <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf="element.Description==null">-</span>
+                <span *ngIf="element.Description!=null">{{element.Description}} </span>
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="actions">
+              <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let element">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" id="btnViewRole" title="View" (click)="navigateToAssetLibraryView(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToAssetLibraryEdit(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" id="btnDeleteRole"title="Delete"  (click)="deleteAssetLibrary(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
+                    <span class="fa fa-trash-o"></span>
+                  </button>
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='assetLibraryList.length==0'>
+          No record found
+        </div>
       </div>
     </div>
   </div>
