--- a/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
+++ b/App/ClientApp/src/app/layout/multi-tenant-user-access-map/multi-tenant-user-access-map.component.html
@@ -21,48 +21,54 @@
               </mat-paginator>
             </div>
           </div>
-          <div class="widget-area-grid padding-0">
-          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-            <!-- Position Column -->
-            <ng-container matColumnDef="parentname">
-              <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Parent Tenant </th>
-              <td mat-cell *matCellDef="let element">{{element.AssociatedTenantName}}</td>
-            </ng-container>
-            <ng-container matColumnDef="username">
-              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
-              <td mat-cell *matCellDef="let element">{{element.UserName}}</td>
-            </ng-container>
-            <ng-container matColumnDef="tenantname">
-              <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Target Tenant </th>
-              <td mat-cell *matCellDef="let element">{{element.OtherTenantName}}</td>
-            </ng-container>
-            <ng-container matColumnDef="role">
-              <th class="width15 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
-              <td mat-cell *matCellDef="let element">{{element.RoleName}} </td>
-            </ng-container>
-            <ng-container matColumnDef="status">
-              <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-              <td mat-cell *matCellDef="let element">
-                <span class="badge badge-success p-1" *ngIf="element.IsActive">Active</span>
-                <span class="badge badge-warning p-1 text-white" *ngIf="!element.IsActive">Inactive</span>
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="actions">
-              <th class="width15 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
-              <td mat-cell *matCellDef="let element">
-                <div class="action-btns btn-tbl-action">
-                  <button type="button" title="Update" id="btnUpdate" (click)="updateTenantUserMapping(element)" [disabled]="!element.IsActive">
-                    <span class="fa fa-pencil-square-o"></span>
-                  </button>
-                  <button type="button" (click)="deactiveTenantUserMapping(element)" title="Deactivate" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
-                <button type="button" (click)="activeTenantUserMapping(element)" title="Activate" *ngIf="!element.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
-                </div>
-              </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+          <div *ngIf='multiTenantUserMapingList!=undefined'>
+            <div class="widget-area-grid padding-0" *ngIf='multiTenantUserMapingList.length!=0'>
+              <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+                <!-- Position Column -->
+                <ng-container matColumnDef="parentname">
+                  <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Parent Tenant </th>
+                  <td mat-cell *matCellDef="let element">{{element.AssociatedTenantName}}</td>
+                </ng-container>
+                <ng-container matColumnDef="username">
+                  <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
+                  <td mat-cell *matCellDef="let element">{{element.UserName}}</td>
+                </ng-container>
+                <ng-container matColumnDef="tenantname">
+                  <th class="width20 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Target Tenant </th>
+                  <td mat-cell *matCellDef="let element">{{element.OtherTenantName}}</td>
+                </ng-container>
+                <ng-container matColumnDef="role">
+                  <th class="width15 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+                  <td mat-cell *matCellDef="let element">{{element.RoleName}} </td>
+                </ng-container>
+                <ng-container matColumnDef="status">
+                  <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                  <td mat-cell *matCellDef="let element">
+                    <span class="badge badge-success p-1" *ngIf="element.IsActive">Active</span>
+                    <span class="badge badge-warning p-1 text-white" *ngIf="!element.IsActive">Inactive</span>
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                  <th class="width15 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+                  <td mat-cell *matCellDef="let element">
+                    <div class="action-btns btn-tbl-action">
+                      <button type="button" title="Update" id="btnUpdate" (click)="updateTenantUserMapping(element)" [disabled]="!element.IsActive">
+                        <span class="fa fa-pencil-square-o"></span>
+                      </button>
+                      <button type="button" (click)="deactiveTenantUserMapping(element)" title="Deactivate" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
+                    <button type="button" (click)="activeTenantUserMapping(element)" title="Activate" *ngIf="!element.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
+                    </div>
+                  </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
             </div>
+            <div class="widget-area-grid padding-0 text-center" *ngIf='multiTenantUserMapingList.length==0'>
+              No record found
+            </div>
+          </div>
+          
         </div>
     </div>
 
