--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -22,61 +22,63 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-          <!-- Position Column -->
-          <ng-container matColumnDef="name">
-            <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let role">{{role.Name}}</td>
-          </ng-container>
 
-          <ng-container matColumnDef="description">
-            <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let role">
-              <span *ngIf="role.Description==null">-</span>
-              <span *ngIf="role.Description!=null">{{role.Description}} </span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="active">
-            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
-            <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsActive">Yes</span>
-              <span *ngIf="!element.IsActive">No</span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="actions">
-            <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let role">
-              <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View Role" (click)="navigateToRoleView(role)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
-                  <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)"
-                        *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
-                  <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <!-- <button type="button" id="btnDeleteRole" (click)="deleteRole(role)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))" >
-                    <span class="fa fa-trash-o"></span>
-                </button> -->
-                <button type="button" title="Deactivate Role" (click)="DeactivateRole(role)"
-                        *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
-                  <span class="fa fa-toggle-on text-success"></span>
-                </button>
-                <button type="button" title="Activate Role" (click)="ActivateRole(role)"
-                        *ngIf="((!role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
-                  <span class="fa fa-toggle-off text-success"></span>
-                </button>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <div *ngIf='roleList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='roleList.length!=0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <td mat-cell *matCellDef="let role">{{role.Name}}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="description">
+              <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+              <td mat-cell *matCellDef="let role">
+                <span *ngIf="role.Description==null">-</span>
+                <span *ngIf="role.Description!=null">{{role.Description}} </span>
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="active">
+              <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf="element.IsActive">Yes</span>
+                <span *ngIf="!element.IsActive">No</span>
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="actions">
+              <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let role">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" id="btnViewRole" title="View Role" (click)="navigateToRoleView(role)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)"
+                          *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" title="Deactivate Role" (click)="DeactivateRole(role)"
+                          *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                    <span class="fa fa-toggle-on text-success"></span>
+                  </button>
+                  <button type="button" title="Activate Role" (click)="ActivateRole(role)"
+                          *ngIf="((!role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                    <span class="fa fa-toggle-off text-success"></span>
+                  </button>
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='roleList.length==0'>
+          No record found
+        </div>
       </div>
     </div>
   </div>
