--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -22,68 +22,74 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="name">
-            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
-          </ng-container>
-
-          <!-- Name Column -->
-          <ng-container matColumnDef="statement">
-            <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
-            <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
-          </ng-container>
-
-          <!-- Weight Column -->
-          <ng-container matColumnDef="startDate">
-            <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:DataFormat}}</td>
-          </ng-container>
-
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="endDate">
-            <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-            <td mat-cell *matCellDef="let element">
-              <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:DataFormat}}</span>
-              <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="DayOfMonth">
-            <th class="width12 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
-            <td mat-cell *matCellDef="let element"> {{element.DayOfMonth}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="actions">
-            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let element">
-              <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View" (click)="navigateToScheduleView(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
-                  <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Update" [disabled]="!element.IsActive"  (click)="navigateToScheduleEdit(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
-                  <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <button type="button" id="btnDeleteRole" (click)="deleteSchedule(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))">
-                  <span class="fa fa-trash-o"></span>
-                </button>
-                <button type="button" title="History" id="btnDelete" (click)="navigateToScheduleHistory(element)" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))"><span class="fa fa-history"></span></button>
-                <button type="button" (click)="activeDeactiveSchedule(element)" title="Deactivate" *ngIf="element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-off text-success"></span></button>
-                <button type="button" (click)="activeDeactiveSchedule(element)" title="Activate" *ngIf="!element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
-
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <div *ngIf='scheduleList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='scheduleList.length!=0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+  
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+            </ng-container>
+  
+            <!-- Name Column -->
+            <ng-container matColumnDef="statement">
+              <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
+              <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
+            </ng-container>
+  
+            <!-- Weight Column -->
+            <ng-container matColumnDef="startDate">
+              <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+              <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:DataFormat}}</td>
+            </ng-container>
+  
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="endDate">
+              <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:DataFormat}}</span>
+                <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="DayOfMonth">
+              <th class="width12 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
+              <td mat-cell *matCellDef="let element"> {{element.DayOfMonth}} </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="actions">
+              <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let element">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" id="btnViewRole" title="View" (click)="navigateToScheduleView(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Update" [disabled]="!element.IsActive"  (click)="navigateToScheduleEdit(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" id="btnDeleteRole" (click)="deleteSchedule(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))">
+                    <span class="fa fa-trash-o"></span>
+                  </button>
+                  <button type="button" title="History" id="btnDelete" (click)="navigateToScheduleHistory(element)" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))"><span class="fa fa-history"></span></button>
+                  <button type="button" (click)="activeDeactiveSchedule(element)" title="Deactivate" *ngIf="element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-off text-success"></span></button>
+                  <button type="button" (click)="activeDeactiveSchedule(element)" title="Activate" *ngIf="!element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
+  
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='scheduleList.length==0'>
+          No record found
+        </div>
       </div>
     </div>
   </div>
