--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -22,67 +22,70 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-          <!-- Position Column -->
-          <ng-container matColumnDef="name">
-            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
-          </ng-container>
-          <ng-container matColumnDef="owner">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
-            <td mat-cell *matCellDef="let element">{{element.StatementOwnerName}} </td>
-          </ng-container>
-          <ng-container matColumnDef="publishedBy">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
-            <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.Status=='Published'">{{element.StatementPublishedByUserName}}</span>
-              <span *ngIf="element.Status=='New'">-</span>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="date">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
-            <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.Status=='Published'">{{element.PublishedOn | date:DataFormat}}</span>
-          
 
-              <span *ngIf="element.Status=='New'">-</span>
-
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="status">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let element">
-              <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
-              <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
-              <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Process'">{{element.Status}}</span>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="actions">
-            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let element">
-              <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'View' }))">
-                  <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToStatementEdit(element)"
-                        *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Edit' }))">
-                  <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <button type="button" id="btnDeleteRole" title="Delete" (click)="deleteStatement(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Delete' }))">
-                  <span class="fa fa-trash-o"></span>
-                </button>
-                <button type="button" title="Publish" *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Publish' }))" (click)="PublishStatement(element)" id="btnDelete"><span class="fa fa-share"></span></button>
-                <button type="button" title="Preview" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'View' }))"id="btnPreview" data-toggle="modal" (click)="PreviewStatement(element)"><span class="fa fa-eye"></span></button>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <div *ngIf='statementList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='statementList.length!=0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+            </ng-container>
+            <ng-container matColumnDef="owner">
+              <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+              <td mat-cell *matCellDef="let element">{{element.StatementOwnerName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="publishedBy">
+              <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf="element.Status=='Published'">{{element.StatementPublishedByUserName}}</span>
+                <span *ngIf="element.Status=='New'">-</span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="date">
+              <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf="element.Status=='Published'">{{element.PublishedOn | date:DataFormat}}</span>
+                <span *ngIf="element.Status=='New'">-</span>  
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+              <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+              <td mat-cell *matCellDef="let element">
+                <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
+                <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
+                <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Process'">{{element.Status}}</span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="actions">
+              <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let element">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'View' }))">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToStatementEdit(element)"
+                          *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Edit' }))">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" id="btnDeleteRole" title="Delete" (click)="deleteStatement(element)"
+                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Delete' }))">
+                    <span class="fa fa-trash-o"></span>
+                  </button>
+                  <button type="button" title="Publish" *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'Publish' }))" (click)="PublishStatement(element)" id="btnDelete"><span class="fa fa-share"></span></button>
+                  <button type="button" title="Preview" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition',Operation: 'View' }))"id="btnPreview" data-toggle="modal" (click)="PreviewStatement(element)"><span class="fa fa-eye"></span></button>
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='statementList.length==0'>
+          No record found
+        </div>
       </div>
     </div>
   </div>
