--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -22,81 +22,87 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-        <!-- Position Column -->
-        <ng-container matColumnDef="name">
-          <th class="width17 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element">{{element.DisplayName}}</td>
-        </ng-container>
-        <ng-container matColumnDef="pagetype">
-          <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
-          <td mat-cell *matCellDef="let element">{{element.PageTypeName}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="version">
-          <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
-          <td mat-cell *matCellDef="let element">V{{element.Version}}.0 </td>
-        </ng-container>
-        <ng-container matColumnDef="owner">
-          <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
-          <td mat-cell *matCellDef="let element">{{element.PageOwnerName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="publishedBy">
-          <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
-          <td mat-cell *matCellDef="let element">
-            <span *ngIf='element.PagePublishedByUserName!=""'>{{element.PagePublishedByUserName}} </span>
-            <span *ngIf='element.PagePublishedByUserName==null'> - </span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="date">
-          <th class="width11 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
-          <td mat-cell *matCellDef="let element"> 
-            <span *ngIf='element.PublishedOn!="0001-01-01T00:00:00"'>{{element.PublishedOn | date : DataFormat}} </span>
-            <span *ngIf='element.PublishedOn=="0001-01-01T00:00:00"'> - </span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-          <th class="width8 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-          <td mat-cell *matCellDef="let element">
-            <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
-            <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
-            <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Process'">{{element.Status}}</span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th class="width17 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="action-btns btn-tbl-action">
-              <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"
-                *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'View' }))">
-                <span class="fa fa-file-text-o"></span>
-              </button>
-              <button type="button" title="Update" id="btnUpdate" (click)="navigationToEditPage(element)"
-                *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Edit' }))">
-                <span class="fa fa-pencil-square-o"></span>
-              </button>
-              <button type="button" title="Delete" id="btnDelete" (click)="DeletePage(element)"
-                *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Delete' }))">
-                <span class="fa fa-trash-o"></span>
-              </button>
-              <button type="button" title="Publish" id="btnPublish" *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Publish' }))" (click)="PublishPage(element)"><span class="fa fa-share"></span></button>
-              <button type="button" title="Clone" id="btnClone" (click)="ClonePage(element)"
-                *ngIf="element.Status!='New' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Create' }))">
-                <span class="fa fa-clone"></span>
-              </button>
-              <button type="button" title="Preview" id="btnPreview" data-toggle="modal" (click)="PreviewPage(element)"
-                *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'View' }))">
-                <span class="fa fa-eye"></span>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      <div *ngIf='templateList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='templateList.length!=0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width17 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <td mat-cell *matCellDef="let element">{{element.DisplayName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="pagetype">
+              <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
+              <td mat-cell *matCellDef="let element">{{element.PageTypeName}}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="version">
+              <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+              <td mat-cell *matCellDef="let element">V{{element.Version}}.0 </td>
+            </ng-container>
+            <ng-container matColumnDef="owner">
+              <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+              <td mat-cell *matCellDef="let element">{{element.PageOwnerName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="publishedBy">
+              <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+              <td mat-cell *matCellDef="let element">
+                <span *ngIf='element.PagePublishedByUserName!=""'>{{element.PagePublishedByUserName}} </span>
+                <span *ngIf='element.PagePublishedByUserName==null'> - </span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="date">
+              <th class="width11 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
+              <td mat-cell *matCellDef="let element"> 
+                <span *ngIf='element.PublishedOn!="0001-01-01T00:00:00"'>{{element.PublishedOn | date : DataFormat}} </span>
+                <span *ngIf='element.PublishedOn=="0001-01-01T00:00:00"'> - </span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+              <th class="width8 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+              <td mat-cell *matCellDef="let element">
+                <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
+                <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
+                <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Process'">{{element.Status}}</span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="actions">
+              <th class="width17 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let element">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"
+                    *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'View' }))">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" title="Update" id="btnUpdate" (click)="navigationToEditPage(element)"
+                    *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Edit' }))">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" title="Delete" id="btnDelete" (click)="DeletePage(element)"
+                    *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Delete' }))">
+                    <span class="fa fa-trash-o"></span>
+                  </button>
+                  <button type="button" title="Publish" id="btnPublish" *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Publish' }))" (click)="PublishPage(element)"><span class="fa fa-share"></span></button>
+                  <button type="button" title="Clone" id="btnClone" (click)="ClonePage(element)"
+                    *ngIf="element.Status!='New' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'Create' }))">
+                    <span class="fa fa-clone"></span>
+                  </button>
+                  <button type="button" title="Preview" id="btnPreview" data-toggle="modal" (click)="PreviewPage(element)"
+                    *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page',Operation: 'View' }))">
+                    <span class="fa fa-eye"></span>
+                  </button>
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
         </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='templateList.length==0'>
+          No Record found
+        </div>
+      </div>
+      
     </div>
   </div>
   
