--- a/App/ClientApp/src/app/layout/tenants/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenants/list/list.component.html
@@ -21,58 +21,58 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0" *ngIf='tenantList!=undefined && tenantList.length>0'>
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-          <!-- Position Column -->
-          <ng-container matColumnDef="name">
-            <th class="width30 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let tenant">{{tenant.TenantName}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="domainName">
-            <th class="width30 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Domain Name </th>
-            <td mat-cell *matCellDef="let tenant">
-              <span *ngIf="tenant.TenantDomainName==null">-</span>
-              <span *ngIf="tenant.TenantDomainName!=null">{{tenant.TenantDomainName}} </span>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="country">
-            <th class="width25 ip-w-20" mat-header-cell *matHeaderCellDef> Country </th>
-            <td mat-cell *matCellDef="let tenant">
-              <span *ngIf="tenant.Country!= null && tenant.Country.CountryName==null">-</span>
-              <span *ngIf="tenant.Country!= null && tenant.Country.CountryName!=null">{{tenant.Country.CountryName}}</span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="actions">
-            <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let role">
-              <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View" (click)="navigateToTenantView(role)">
-                  <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Update" *ngIf="role.IsActive"(click)="navigateToTenantEdit(role)">
-                  <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" title="Delete" (click)="deleteTenant(role)">
-                  <span class="fa fa-trash"></span>
-                </button>
-
-                <button type="button" (click)="activeDeactiveTenant(role)" title="Deactivate" *ngIf="role.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
-                <button type="button" (click)="activeDeactiveTenant(role)" title="Activate" *ngIf="!role.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
-
-
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <div *ngIf='tenantList!=undefined'>
+        <div class="widget-area-grid padding-0" *ngIf='tenantList.length>0'>
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+              <th class="width30 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <td mat-cell *matCellDef="let tenant">{{tenant.TenantName}}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="domainName">
+              <th class="width30 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Domain Name </th>
+              <td mat-cell *matCellDef="let tenant">
+                <span *ngIf="tenant.TenantDomainName==null">-</span>
+                <span *ngIf="tenant.TenantDomainName!=null">{{tenant.TenantDomainName}} </span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="country">
+              <th class="width25 ip-w-20" mat-header-cell *matHeaderCellDef> Country </th>
+              <td mat-cell *matCellDef="let tenant">
+                <span *ngIf="tenant.Country!= null && tenant.Country.CountryName==null">-</span>
+                <span *ngIf="tenant.Country!= null && tenant.Country.CountryName!=null">{{tenant.Country.CountryName}}</span>
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="actions">
+              <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let role">
+                <div class="action-btns btn-tbl-action">
+                  <button type="button" id="btnViewRole" title="View" (click)="navigateToTenantView(role)">
+                    <span class="fa fa-file-text-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Update" *ngIf="role.IsActive"(click)="navigateToTenantEdit(role)">
+                    <span class="fa fa-pencil-square-o"></span>
+                  </button>
+                  <button type="button" id="btnUpdateRole" title="Delete" (click)="deleteTenant(role)">
+                    <span class="fa fa-trash"></span>
+                  </button>
+                  <button type="button" (click)="activeDeactiveTenant(role)" title="Deactivate" *ngIf="role.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
+                  <button type="button" (click)="activeDeactiveTenant(role)" title="Activate" *ngIf="!role.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
+                </div>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+        <div class="widget-area-grid padding-0 text-center" *ngIf='tenantList.length==0'>
+          No record found
       </div>
-      <div class="widget-area-grid padding-0 text-center" *ngIf='tenantList!=undefined && tenantList.length==0'>
-        <label>No record found.</label>
-    </div>
+      </div>
+      
     </div>
   </div>
   <!--desktop view end-->
